--- a/app/public/home.html
+++ b/app/public/home.html
@@ -14,7 +14,7 @@
 <body>
 
     <h1>Friend Finder</h1>
-    div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-3">Friend Finder</h1>
       <p class="lead">Take a quick survey and find your new best friend</p>
